--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.11.0",
+    "   ": "^3.3.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
