--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.11.0",
-    "   ": "^3.3.2"
+    "react-router-dom": "^6.11.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
@@ -31,6 +30,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.5.5",
     "vite": "^2.9.12"
   },
