--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "react-router-dom": "^6.11.0"
   },
   "devDependencies": {
+    "@types/node": "^18.16.3",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "@vitejs/plugin-react": "^1.3.2",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
@@ -30,6 +32,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.5.1",
+    "rollup-plugin-css-only": "^4.3.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.5.5",
     "vite": "^2.9.12"
