--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "embla-carousel": "^8.0.0-rc03",
+    "embla-carousel-react": "^8.0.0-rc03",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.11.0"
